y.output

state 0
	$accept: .main $end 

	EN_TOK  shift 5
	.  error

	ent  goto 4
	ast  goto 2
	entities  goto 3
	main  goto 1

state 1
	$accept:  main.$end 

	$end  accept
	.  error


state 2
	main:  ast.    (1)

	.  reduce 1 (src line 51)


state 3
	ast:  entities.    (2)
	entities:  entities.ent 

	EN_TOK  shift 5
	.  reduce 2 (src line 56)

	ent  goto 6

state 4
	entities:  ent.    (3)

	.  reduce 3 (src line 61)


state 5
	ent:  EN_TOK.IDENT LS_TOK fields RS_TOK ARROW_TOK actions 

	IDENT  shift 7
	.  error


state 6
	entities:  entities ent.    (4)

	.  reduce 4 (src line 66)


state 7
	ent:  EN_TOK IDENT.LS_TOK fields RS_TOK ARROW_TOK actions 

	LS_TOK  shift 8
	.  error


state 8
	ent:  EN_TOK IDENT LS_TOK.fields RS_TOK ARROW_TOK actions 

	IDENT  shift 11
	.  error

	field  goto 10
	fields  goto 9

state 9
	ent:  EN_TOK IDENT LS_TOK fields.RS_TOK ARROW_TOK actions 
	fields:  fields.field 

	IDENT  shift 11
	RS_TOK  shift 12
	.  error

	field  goto 13

state 10
	fields:  field.    (6)

	.  reduce 6 (src line 80)


state 11
	field:  IDENT.type 

	INT_T_TOK  shift 15
	STRING_T_TOK  shift 16
	.  error

	type  goto 14

state 12
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK.ARROW_TOK actions 

	ARROW_TOK  shift 17
	.  error


state 13
	fields:  fields field.    (7)

	.  reduce 7 (src line 85)


state 14
	field:  IDENT type.    (8)

	.  reduce 8 (src line 90)


state 15
	type:  INT_T_TOK.    (16)

	.  reduce 16 (src line 113)


state 16
	type:  STRING_T_TOK.    (17)

	.  reduce 17 (src line 115)


state 17
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK ARROW_TOK.actions 

	CREATE_TOK  shift 20
	READ_TOK  shift 21
	UPDATE_TOK  shift 22
	DELETE_TOK  shift 23
	LIST_TOK  shift 24
	.  error

	actions  goto 18
	action  goto 19

state 18
	ent:  EN_TOK IDENT LS_TOK fields RS_TOK ARROW_TOK actions.    (5)
	actions:  actions.COMMA_TOK action 

	COMMA_TOK  shift 25
	.  reduce 5 (src line 71)


state 19
	actions:  action.    (9)

	.  reduce 9 (src line 95)


state 20
	action:  CREATE_TOK.    (11)

	.  reduce 11 (src line 105)


state 21
	action:  READ_TOK.    (12)

	.  reduce 12 (src line 107)


state 22
	action:  UPDATE_TOK.    (13)

	.  reduce 13 (src line 108)


state 23
	action:  DELETE_TOK.    (14)

	.  reduce 14 (src line 109)


state 24
	action:  LIST_TOK.    (15)

	.  reduce 15 (src line 110)


state 25
	actions:  actions COMMA_TOK.action 

	CREATE_TOK  shift 20
	READ_TOK  shift 21
	UPDATE_TOK  shift 22
	DELETE_TOK  shift 23
	LIST_TOK  shift 24
	.  error

	action  goto 26

state 26
	actions:  actions COMMA_TOK action.    (10)

	.  reduce 10 (src line 100)


16 terminals, 10 nonterminals
18 grammar rules, 27/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
59 working sets used
memory: parser 11/240000
0 extra closures
21 shift entries, 1 exceptions
12 goto entries
0 entries saved by goto default
Optimizer space used: output 27/240000
27 table entries, 0 zero
maximum spread: 16, maximum offset: 25
